[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.7.0"
js-sys = "0.3.57"
serde = "1.0.137"
serde_derive = "1.0.137"
strum = "0.24.0"
strum_macros = "0.24.0"
wasm-bindgen = "0.2.80"
wasm-bindgen-futures = "0.4.30"
web-sys = "0.3.57"
yew = "0.19.3"
